--- a/src/app/shared/modules/backendErrorMessages/components/feed/components/feed/feed.component.html
+++ b/src/app/shared/modules/backendErrorMessages/components/feed/components/feed/feed.component.html
@@ -1,6 +1,6 @@
-<div *ngIf="isLoading$ | async">Loading...</div>
+<mc-error-message *ngIf="error$ | async"></mc-error-message>
 
-<div *ngIf="error$ | async">Some error happened</div>
+<mc-loading *ngIf="isLoading$ | async"></mc-loading>
 
 <div *ngIf="feed$ | async">
   <div
@@ -23,8 +23,13 @@
       <h1>{{ article.title }}</h1>
       <p>{{ article.description }}</p>
       <span>Read more...</span>
-      HERE LIST OF TAGS
+      <mc-tag-list [tags]="article.tagList"></mc-tag-list>
     </a>
   </div>
-  PAGINATION
+  <mc-pagination
+    [total]="(feed$ | async)?.articlesCount"
+    [limit]="limit"
+    [url]="baseUrl"
+    [currentPage]="currentPage"
+  ></mc-pagination>
 </div>
